updated tutorials + readme with latest versions of libs.

--- a/1 - Simple Sentiment Analysis.ipynb
+++ b/1 - Simple Sentiment Analysis.ipynb
@@ -37,7 +37,7 @@
     "\n",
     "We use the `TEXT` field to define how the review should be processed, and the `LABEL` field to process the sentiment. \n",
     "\n",
-    "Our `TEXT` field has `tokenize='spacy'` as an argument. This defines that the \"tokenization\" (the act of splitting the string into discrete \"tokens\") should be done using the [spaCy](https://spacy.io) tokenizer. If no `tokenize` argument is passed, the default is simply splitting the string on spaces.\n",
+    "Our `TEXT` field has `tokenize='spacy'` as an argument. This defines that the \"tokenization\" (the act of splitting the string into discrete \"tokens\") should be done using the [spaCy](https://spacy.io) tokenizer. If no `tokenize` argument is passed, the default is simply splitting the string on spaces. We also need to specify a `tokenizer_language` which tells torchtext which spaCy model to use. We use the `en_core_web_sm` model which has to be downloaded with `python -m spacy download en_core_web_sm` before you run this notebook!\n",
     "\n",
     "`LABEL` is defined by a `LabelField`, a special subset of the `Field` class specifically used for handling labels. We will explain the `dtype` argument later.\n",
     "\n",
@@ -60,7 +60,8 @@
     "torch.manual_seed(SEED)\n",
     "torch.backends.cudnn.deterministic = True\n",
     "\n",
-    "TEXT = data.Field(tokenize = 'spacy')\n",
+    "TEXT = data.Field(tokenize = 'spacy',\n",
+    "                  tokenizer_language = 'en_core_web_sm')\n",
     "LABEL = data.LabelField(dtype = torch.float)"
    ]
   },
@@ -817,7 +818,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
