--- a/2 - Upgraded Sentiment Analysis.ipynb
+++ b/2 - Upgraded Sentiment Analysis.ipynb
@@ -35,7 +35,18 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ben/miniconda3/envs/pytorch17/lib/python3.8/site-packages/torchtext-0.9.0a0+c38fd42-py3.8-linux-x86_64.egg/torchtext/data/field.py:150: UserWarning: Field class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.\n",
+      "  warnings.warn('{} class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.'.format(self.__class__.__name__), UserWarning)\n",
+      "/home/ben/miniconda3/envs/pytorch17/lib/python3.8/site-packages/torchtext-0.9.0a0+c38fd42-py3.8-linux-x86_64.egg/torchtext/data/field.py:150: UserWarning: LabelField class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.\n",
+      "  warnings.warn('{} class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.'.format(self.__class__.__name__), UserWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "from torchtext import data\n",
@@ -46,7 +57,10 @@
     "torch.manual_seed(SEED)\n",
     "torch.backends.cudnn.deterministic = True\n",
     "\n",
-    "TEXT = data.Field(tokenize = 'spacy', include_lengths = True)\n",
+    "TEXT = data.Field(tokenize = 'spacy',\n",
+    "                  tokenizer_language = 'en_core_web_sm',\n",
+    "                  include_lengths = True)\n",
+    "\n",
     "LABEL = data.LabelField(dtype = torch.float)"
    ]
   },
@@ -61,7 +75,16 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ben/miniconda3/envs/pytorch17/lib/python3.8/site-packages/torchtext-0.9.0a0+c38fd42-py3.8-linux-x86_64.egg/torchtext/data/example.py:78: UserWarning: Example class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.\n",
+      "  warnings.warn('Example class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.', UserWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "from torchtext import datasets\n",
     "\n",
@@ -133,7 +156,16 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ben/miniconda3/envs/pytorch17/lib/python3.8/site-packages/torchtext-0.9.0a0+c38fd42-py3.8-linux-x86_64.egg/torchtext/data/iterator.py:48: UserWarning: BucketIterator class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.\n",
+      "  warnings.warn('{} class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.'.format(self.__class__.__name__), UserWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "BATCH_SIZE = 64\n",
     "\n",
@@ -204,7 +236,7 @@
     "\n",
     "As we are passing the lengths of our sentences to be able to use packed padded sequences, we have to add a second argument, `text_lengths`, to `forward`. \n",
     "\n",
-    "Before we pass our embeddings to the RNN, we need to pack them, which we do with `nn.utils.rnn.packed_padded_sequence`. This will cause our RNN to only process the non-padded elements of our sequence. The RNN will then return `packed_output` (a packed sequence) as well as the `hidden` and `cell` states (both of which are tensors). Without packed padded sequences, `hidden` and `cell` are tensors from the last element in the sequence, which will most probably be a pad token, however when using packed padded sequences they are both from the last non-padded element in the sequence. \n",
+    "Before we pass our embeddings to the RNN, we need to pack them, which we do with `nn.utils.rnn.packed_padded_sequence`. This will cause our RNN to only process the non-padded elements of our sequence. The RNN will then return `packed_output` (a packed sequence) as well as the `hidden` and `cell` states (both of which are tensors). Without packed padded sequences, `hidden` and `cell` are tensors from the last element in the sequence, which will most probably be a pad token, however when using packed padded sequences they are both from the last non-padded element in the sequence. Note that the `lengths` argument of `packed_padded_sequence` must be a CPU tensor so we explicitly make it one by using `.to('cpu')`.\n",
     "\n",
     "We then unpack the output sequence, with `nn.utils.rnn.pad_packed_sequence`, to transform it from a packed sequence to a tensor. The elements of `output` from padding tokens will be zero tensors (tensors where every element is zero). Usually, we only have to unpack output if we are going to use it later on in the model. Although we aren't in this case, we still unpack the sequence just to show how it is done.\n",
     "\n",
@@ -246,7 +278,8 @@
     "        #embedded = [sent len, batch size, emb dim]\n",
     "        \n",
     "        #pack sequence\n",
-    "        packed_embedded = nn.utils.rnn.pack_padded_sequence(embedded, text_lengths)\n",
+    "        # lengths need to be on CPU!\n",
+    "        packed_embedded = nn.utils.rnn.pack_padded_sequence(embedded, text_lengths.to('cpu'))\n",
     "        \n",
     "        packed_output, (hidden, cell) = self.rnn(packed_embedded)\n",
     "        \n",
@@ -383,9 +416,9 @@
        "        [-0.8555, -0.7208,  1.3755,  ...,  0.0825, -1.1314,  0.3997],\n",
        "        [-0.0382, -0.2449,  0.7281,  ..., -0.1459,  0.8278,  0.2706],\n",
        "        ...,\n",
-       "        [-0.0614, -0.0516, -0.6159,  ..., -0.0354,  0.0379, -0.1809],\n",
-       "        [ 0.1885, -0.1690,  0.1530,  ..., -0.2077,  0.5473, -0.4517],\n",
-       "        [-0.1182, -0.4701, -0.0600,  ...,  0.7991, -0.0194,  0.4785]])"
+       "        [ 0.6783,  0.0488,  0.5860,  ...,  0.2680, -0.0086,  0.5758],\n",
+       "        [-0.6208, -0.0480, -0.1046,  ...,  0.3718,  0.1225,  0.1061],\n",
+       "        [-0.6553, -0.6292,  0.9967,  ...,  0.2278, -0.1975,  0.0857]])"
       ]
      },
      "execution_count": 10,
@@ -421,9 +454,9 @@
       "        [ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000],\n",
       "        [-0.0382, -0.2449,  0.7281,  ..., -0.1459,  0.8278,  0.2706],\n",
       "        ...,\n",
-      "        [-0.0614, -0.0516, -0.6159,  ..., -0.0354,  0.0379, -0.1809],\n",
-      "        [ 0.1885, -0.1690,  0.1530,  ..., -0.2077,  0.5473, -0.4517],\n",
-      "        [-0.1182, -0.4701, -0.0600,  ...,  0.7991, -0.0194,  0.4785]])\n"
+      "        [ 0.6783,  0.0488,  0.5860,  ...,  0.2680, -0.0086,  0.5758],\n",
+      "        [-0.6208, -0.0480, -0.1046,  ...,  0.3718,  0.1225,  0.1061],\n",
+      "        [-0.6553, -0.6292,  0.9967,  ...,  0.2278, -0.1975,  0.0857]])\n"
      ]
     }
    ],
@@ -639,24 +672,32 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ben/miniconda3/envs/pytorch17/lib/python3.8/site-packages/torchtext-0.9.0a0+c38fd42-py3.8-linux-x86_64.egg/torchtext/data/batch.py:23: UserWarning: Batch class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.\n",
+      "  warnings.warn('{} class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.'.format(self.__class__.__name__), UserWarning)\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 01 | Epoch Time: 0m 28s\n",
-      "\tTrain Loss: 0.648 | Train Acc: 62.05%\n",
-      "\t Val. Loss: 0.620 |  Val. Acc: 66.72%\n",
-      "Epoch: 02 | Epoch Time: 0m 27s\n",
-      "\tTrain Loss: 0.622 | Train Acc: 66.51%\n",
-      "\t Val. Loss: 0.669 |  Val. Acc: 62.83%\n",
-      "Epoch: 03 | Epoch Time: 0m 27s\n",
-      "\tTrain Loss: 0.586 | Train Acc: 69.01%\n",
-      "\t Val. Loss: 0.522 |  Val. Acc: 75.52%\n",
-      "Epoch: 04 | Epoch Time: 0m 27s\n",
-      "\tTrain Loss: 0.415 | Train Acc: 82.02%\n",
-      "\t Val. Loss: 0.457 |  Val. Acc: 77.10%\n",
-      "Epoch: 05 | Epoch Time: 0m 27s\n",
-      "\tTrain Loss: 0.335 | Train Acc: 86.15%\n",
-      "\t Val. Loss: 0.305 |  Val. Acc: 87.15%\n"
+      "Epoch: 01 | Epoch Time: 0m 36s\n",
+      "\tTrain Loss: 0.673 | Train Acc: 58.05%\n",
+      "\t Val. Loss: 0.619 |  Val. Acc: 64.97%\n",
+      "Epoch: 02 | Epoch Time: 0m 36s\n",
+      "\tTrain Loss: 0.611 | Train Acc: 66.33%\n",
+      "\t Val. Loss: 0.510 |  Val. Acc: 74.32%\n",
+      "Epoch: 03 | Epoch Time: 0m 37s\n",
+      "\tTrain Loss: 0.484 | Train Acc: 77.04%\n",
+      "\t Val. Loss: 0.397 |  Val. Acc: 82.95%\n",
+      "Epoch: 04 | Epoch Time: 0m 37s\n",
+      "\tTrain Loss: 0.384 | Train Acc: 83.57%\n",
+      "\t Val. Loss: 0.407 |  Val. Acc: 83.23%\n",
+      "Epoch: 05 | Epoch Time: 0m 37s\n",
+      "\tTrain Loss: 0.314 | Train Acc: 86.98%\n",
+      "\t Val. Loss: 0.314 |  Val. Acc: 86.36%\n"
      ]
     }
    ],
@@ -701,7 +742,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Loss: 0.308 | Test Acc: 87.07%\n"
+      "Test Loss: 0.334 | Test Acc: 85.28%\n"
      ]
     }
    ],
@@ -744,7 +785,7 @@
    "outputs": [],
    "source": [
     "import spacy\n",
-    "nlp = spacy.load('en')\n",
+    "nlp = spacy.load('en_core_web_sm')\n",
     "\n",
     "def predict_sentiment(model, sentence):\n",
     "    model.eval()\n",
@@ -773,7 +814,7 @@
     {
      "data": {
       "text/plain": [
-       "0.005683214403688908"
+       "0.05380420759320259"
       ]
      },
      "execution_count": 21,
@@ -800,7 +841,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9926869869232178"
+       "0.94941645860672"
       ]
      },
      "execution_count": 22,
@@ -838,7 +879,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
