--- a/3 - Faster Sentiment Analysis.ipynb
+++ b/3 - Faster Sentiment Analysis.ipynb
@@ -50,7 +50,7 @@
     {
      "data": {
       "text/plain": [
-       "['This', 'film', 'is', 'terrible', 'This film', 'film is', 'is terrible']"
+       "['This', 'film', 'is', 'terrible', 'film is', 'This film', 'is terrible']"
       ]
      },
      "execution_count": 2,
@@ -75,7 +75,18 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ben/miniconda3/envs/pytorch17/lib/python3.8/site-packages/torchtext-0.9.0a0+c38fd42-py3.8-linux-x86_64.egg/torchtext/data/field.py:150: UserWarning: Field class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.\n",
+      "  warnings.warn('{} class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.'.format(self.__class__.__name__), UserWarning)\n",
+      "/home/ben/miniconda3/envs/pytorch17/lib/python3.8/site-packages/torchtext-0.9.0a0+c38fd42-py3.8-linux-x86_64.egg/torchtext/data/field.py:150: UserWarning: LabelField class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.\n",
+      "  warnings.warn('{} class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.'.format(self.__class__.__name__), UserWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "from torchtext import data\n",
@@ -86,7 +97,10 @@
     "torch.manual_seed(SEED)\n",
     "torch.backends.cudnn.deterministic = True\n",
     "\n",
-    "TEXT = data.Field(tokenize = 'spacy', preprocessing = generate_bigrams)\n",
+    "TEXT = data.Field(tokenize = 'spacy',\n",
+    "                  tokenizer_language = 'en_core_web_sm',\n",
+    "                  preprocessing = generate_bigrams)\n",
+    "\n",
     "LABEL = data.LabelField(dtype = torch.float)"
    ]
   },
@@ -101,7 +115,16 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ben/miniconda3/envs/pytorch17/lib/python3.8/site-packages/torchtext-0.9.0a0+c38fd42-py3.8-linux-x86_64.egg/torchtext/data/example.py:78: UserWarning: Example class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.\n",
+      "  warnings.warn('Example class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.', UserWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "\n",
@@ -144,7 +167,16 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ben/miniconda3/envs/pytorch17/lib/python3.8/site-packages/torchtext-0.9.0a0+c38fd42-py3.8-linux-x86_64.egg/torchtext/data/iterator.py:48: UserWarning: BucketIterator class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.\n",
+      "  warnings.warn('{} class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.'.format(self.__class__.__name__), UserWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "BATCH_SIZE = 64\n",
     "\n",
@@ -287,9 +319,9 @@
        "        [-0.8555, -0.7208,  1.3755,  ...,  0.0825, -1.1314,  0.3997],\n",
        "        [-0.0382, -0.2449,  0.7281,  ..., -0.1459,  0.8278,  0.2706],\n",
        "        ...,\n",
-       "        [ 0.3199,  0.0746,  0.0231,  ..., -0.3609,  1.1303,  0.5668],\n",
-       "        [-1.0530, -1.0757,  0.3903,  ...,  0.0792, -0.3059,  1.9734],\n",
-       "        [-0.1734, -0.3195,  0.3694,  ..., -0.2435,  0.4767,  0.1151]])"
+       "        [-0.1606, -0.7357,  0.5809,  ...,  0.8704, -1.5637, -1.5724],\n",
+       "        [-1.3126, -1.6717,  0.4203,  ...,  0.2348, -0.9110,  1.0914],\n",
+       "        [-1.5268,  1.5639, -1.0541,  ...,  1.0045, -0.6813, -0.8846]])"
       ]
      },
      "execution_count": 10,
@@ -508,24 +540,32 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ben/miniconda3/envs/pytorch17/lib/python3.8/site-packages/torchtext-0.9.0a0+c38fd42-py3.8-linux-x86_64.egg/torchtext/data/batch.py:23: UserWarning: Batch class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.\n",
+      "  warnings.warn('{} class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.'.format(self.__class__.__name__), UserWarning)\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 01 | Epoch Time: 0m 6s\n",
-      "\tTrain Loss: 0.688 | Train Acc: 57.23%\n",
-      "\t Val. Loss: 0.642 |  Val. Acc: 71.23%\n",
-      "Epoch: 02 | Epoch Time: 0m 5s\n",
-      "\tTrain Loss: 0.653 | Train Acc: 71.09%\n",
-      "\t Val. Loss: 0.521 |  Val. Acc: 75.28%\n",
-      "Epoch: 03 | Epoch Time: 0m 5s\n",
-      "\tTrain Loss: 0.582 | Train Acc: 78.88%\n",
-      "\t Val. Loss: 0.449 |  Val. Acc: 79.64%\n",
-      "Epoch: 04 | Epoch Time: 0m 5s\n",
-      "\tTrain Loss: 0.505 | Train Acc: 83.15%\n",
-      "\t Val. Loss: 0.426 |  Val. Acc: 82.12%\n",
-      "Epoch: 05 | Epoch Time: 0m 5s\n",
-      "\tTrain Loss: 0.439 | Train Acc: 85.99%\n",
-      "\t Val. Loss: 0.397 |  Val. Acc: 85.02%\n"
+      "Epoch: 01 | Epoch Time: 0m 7s\n",
+      "\tTrain Loss: 0.688 | Train Acc: 61.31%\n",
+      "\t Val. Loss: 0.637 |  Val. Acc: 72.46%\n",
+      "Epoch: 02 | Epoch Time: 0m 6s\n",
+      "\tTrain Loss: 0.651 | Train Acc: 75.04%\n",
+      "\t Val. Loss: 0.507 |  Val. Acc: 76.92%\n",
+      "Epoch: 03 | Epoch Time: 0m 6s\n",
+      "\tTrain Loss: 0.578 | Train Acc: 79.91%\n",
+      "\t Val. Loss: 0.424 |  Val. Acc: 80.97%\n",
+      "Epoch: 04 | Epoch Time: 0m 6s\n",
+      "\tTrain Loss: 0.501 | Train Acc: 83.97%\n",
+      "\t Val. Loss: 0.377 |  Val. Acc: 84.34%\n",
+      "Epoch: 05 | Epoch Time: 0m 6s\n",
+      "\tTrain Loss: 0.435 | Train Acc: 86.96%\n",
+      "\t Val. Loss: 0.363 |  Val. Acc: 86.18%\n"
      ]
     }
    ],
@@ -572,7 +612,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Loss: 0.391 | Test Acc: 85.11%\n"
+      "Test Loss: 0.381 | Test Acc: 85.42%\n"
      ]
     }
    ],
@@ -600,7 +640,7 @@
    "outputs": [],
    "source": [
     "import spacy\n",
-    "nlp = spacy.load('en')\n",
+    "nlp = spacy.load('en_core_web_sm')\n",
     "\n",
     "def predict_sentiment(model, sentence):\n",
     "    model.eval()\n",
@@ -627,7 +667,7 @@
     {
      "data": {
       "text/plain": [
-       "1.621993561684576e-07"
+       "2.1313092350011553e-12"
       ]
      },
      "execution_count": 21,
@@ -692,7 +732,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
