--- a/4 - Convolutional Sentiment Analysis.ipynb
+++ b/4 - Convolutional Sentiment Analysis.ipynb
@@ -36,7 +36,20 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ben/miniconda3/envs/pytorch17/lib/python3.8/site-packages/torchtext-0.9.0a0+c38fd42-py3.8-linux-x86_64.egg/torchtext/data/field.py:150: UserWarning: Field class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.\n",
+      "  warnings.warn('{} class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.'.format(self.__class__.__name__), UserWarning)\n",
+      "/home/ben/miniconda3/envs/pytorch17/lib/python3.8/site-packages/torchtext-0.9.0a0+c38fd42-py3.8-linux-x86_64.egg/torchtext/data/field.py:150: UserWarning: LabelField class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.\n",
+      "  warnings.warn('{} class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.'.format(self.__class__.__name__), UserWarning)\n",
+      "/home/ben/miniconda3/envs/pytorch17/lib/python3.8/site-packages/torchtext-0.9.0a0+c38fd42-py3.8-linux-x86_64.egg/torchtext/data/example.py:78: UserWarning: Example class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.\n",
+      "  warnings.warn('Example class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.', UserWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "from torchtext import data\n",
@@ -51,7 +64,9 @@
     "torch.manual_seed(SEED)\n",
     "torch.backends.cudnn.deterministic = True\n",
     "\n",
-    "TEXT = data.Field(tokenize = 'spacy', batch_first = True)\n",
+    "TEXT = data.Field(tokenize = 'spacy', \n",
+    "                  tokenizer_language = 'en_core_web_sm',\n",
+    "                  batch_first = True)\n",
     "LABEL = data.LabelField(dtype = torch.float)\n",
     "\n",
     "train_data, test_data = datasets.IMDB.splits(TEXT, LABEL)\n",
@@ -93,7 +108,16 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ben/miniconda3/envs/pytorch17/lib/python3.8/site-packages/torchtext-0.9.0a0+c38fd42-py3.8-linux-x86_64.egg/torchtext/data/iterator.py:48: UserWarning: BucketIterator class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.\n",
+      "  warnings.warn('{} class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.'.format(self.__class__.__name__), UserWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "BATCH_SIZE = 64\n",
     "\n",
@@ -416,9 +440,9 @@
        "        [-0.8555, -0.7208,  1.3755,  ...,  0.0825, -1.1314,  0.3997],\n",
        "        [-0.0382, -0.2449,  0.7281,  ..., -0.1459,  0.8278,  0.2706],\n",
        "        ...,\n",
-       "        [-0.0614, -0.0516, -0.6159,  ..., -0.0354,  0.0379, -0.1809],\n",
-       "        [ 0.1885, -0.1690,  0.1530,  ..., -0.2077,  0.5473, -0.4517],\n",
-       "        [-0.1182, -0.4701, -0.0600,  ...,  0.7991, -0.0194,  0.4785]])"
+       "        [ 0.6783,  0.0488,  0.5860,  ...,  0.2680, -0.0086,  0.5758],\n",
+       "        [-0.6208, -0.0480, -0.1046,  ...,  0.3718,  0.1225,  0.1061],\n",
+       "        [-0.6553, -0.6292,  0.9967,  ...,  0.2278, -0.1975,  0.0857]])"
       ]
      },
      "execution_count": 9,
@@ -623,24 +647,32 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ben/miniconda3/envs/pytorch17/lib/python3.8/site-packages/torchtext-0.9.0a0+c38fd42-py3.8-linux-x86_64.egg/torchtext/data/batch.py:23: UserWarning: Batch class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.\n",
+      "  warnings.warn('{} class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.'.format(self.__class__.__name__), UserWarning)\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Epoch: 01 | Epoch Time: 0m 13s\n",
-      "\tTrain Loss: 0.645 | Train Acc: 62.08%\n",
-      "\t Val. Loss: 0.488 |  Val. Acc: 78.64%\n",
-      "Epoch: 02 | Epoch Time: 0m 11s\n",
-      "\tTrain Loss: 0.418 | Train Acc: 81.14%\n",
-      "\t Val. Loss: 0.361 |  Val. Acc: 84.59%\n",
-      "Epoch: 03 | Epoch Time: 0m 11s\n",
-      "\tTrain Loss: 0.300 | Train Acc: 87.33%\n",
-      "\t Val. Loss: 0.348 |  Val. Acc: 85.06%\n",
-      "Epoch: 04 | Epoch Time: 0m 11s\n",
-      "\tTrain Loss: 0.217 | Train Acc: 91.49%\n",
-      "\t Val. Loss: 0.320 |  Val. Acc: 86.71%\n",
-      "Epoch: 05 | Epoch Time: 0m 11s\n",
-      "\tTrain Loss: 0.156 | Train Acc: 94.22%\n",
-      "\t Val. Loss: 0.334 |  Val. Acc: 87.06%\n"
+      "\tTrain Loss: 0.649 | Train Acc: 61.79%\n",
+      "\t Val. Loss: 0.507 |  Val. Acc: 78.93%\n",
+      "Epoch: 02 | Epoch Time: 0m 13s\n",
+      "\tTrain Loss: 0.433 | Train Acc: 79.86%\n",
+      "\t Val. Loss: 0.357 |  Val. Acc: 84.57%\n",
+      "Epoch: 03 | Epoch Time: 0m 13s\n",
+      "\tTrain Loss: 0.305 | Train Acc: 87.36%\n",
+      "\t Val. Loss: 0.312 |  Val. Acc: 86.76%\n",
+      "Epoch: 04 | Epoch Time: 0m 13s\n",
+      "\tTrain Loss: 0.224 | Train Acc: 91.20%\n",
+      "\t Val. Loss: 0.303 |  Val. Acc: 87.16%\n",
+      "Epoch: 05 | Epoch Time: 0m 14s\n",
+      "\tTrain Loss: 0.159 | Train Acc: 94.16%\n",
+      "\t Val. Loss: 0.317 |  Val. Acc: 87.37%\n"
      ]
     }
    ],
@@ -685,7 +717,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Loss: 0.339 | Test Acc: 85.39%\n"
+      "Test Loss: 0.343 | Test Acc: 85.31%\n"
      ]
     }
    ],
@@ -710,12 +742,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "import spacy\n",
-    "nlp = spacy.load('en')\n",
+    "nlp = spacy.load('en_core_web_sm')\n",
     "\n",
     "def predict_sentiment(model, sentence, min_len = 5):\n",
     "    model.eval()\n",
@@ -738,16 +770,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.11022213101387024"
+       "0.09913548082113266"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,16 +797,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9785954356193542"
+       "0.9769725799560547"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -800,7 +832,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
