--- a/5 - Multi-class Sentiment Analysis.ipynb
+++ b/5 - Multi-class Sentiment Analysis.ipynb
@@ -21,7 +21,20 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ben/miniconda3/envs/pytorch17/lib/python3.8/site-packages/torchtext-0.9.0a0+c38fd42-py3.8-linux-x86_64.egg/torchtext/data/field.py:150: UserWarning: Field class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.\n",
+      "  warnings.warn('{} class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.'.format(self.__class__.__name__), UserWarning)\n",
+      "/home/ben/miniconda3/envs/pytorch17/lib/python3.8/site-packages/torchtext-0.9.0a0+c38fd42-py3.8-linux-x86_64.egg/torchtext/data/field.py:150: UserWarning: LabelField class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.\n",
+      "  warnings.warn('{} class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.'.format(self.__class__.__name__), UserWarning)\n",
+      "/home/ben/miniconda3/envs/pytorch17/lib/python3.8/site-packages/torchtext-0.9.0a0+c38fd42-py3.8-linux-x86_64.egg/torchtext/data/example.py:78: UserWarning: Example class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.\n",
+      "  warnings.warn('Example class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.', UserWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "from torchtext import data\n",
@@ -33,7 +46,9 @@
     "torch.manual_seed(SEED)\n",
     "torch.backends.cudnn.deterministic = True\n",
     "\n",
-    "TEXT = data.Field(tokenize = 'spacy')\n",
+    "TEXT = data.Field(tokenize = 'spacy',\n",
+    "                  tokenizer_language = 'en_core_web_sm')\n",
+    "\n",
     "LABEL = data.LabelField()\n",
     "\n",
     "train_data, test_data = datasets.TREC.splits(TEXT, LABEL, fine_grained=False)\n",
@@ -115,7 +130,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "defaultdict(<function _default_unk_index at 0x7f0a50190d08>, {'HUM': 0, 'ENTY': 1, 'DESC': 2, 'NUM': 3, 'LOC': 4, 'ABBR': 5})\n"
+      "defaultdict(None, {'HUM': 0, 'ENTY': 1, 'DESC': 2, 'NUM': 3, 'LOC': 4, 'ABBR': 5})\n"
      ]
     }
    ],
@@ -134,7 +149,16 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ben/miniconda3/envs/pytorch17/lib/python3.8/site-packages/torchtext-0.9.0a0+c38fd42-py3.8-linux-x86_64.egg/torchtext/data/iterator.py:48: UserWarning: BucketIterator class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.\n",
+      "  warnings.warn('{} class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.'.format(self.__class__.__name__), UserWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "BATCH_SIZE = 64\n",
     "\n",
@@ -254,7 +278,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The model has 842,406 trainable parameters\n"
+      "The model has 841,806 trainable parameters\n"
      ]
     }
    ],
@@ -286,7 +310,7 @@
        "        ...,\n",
        "        [-0.3110, -0.3398,  1.0308,  ...,  0.5317,  0.2836, -0.0640],\n",
        "        [ 0.0091,  0.2810,  0.7356,  ..., -0.7508,  0.8967, -0.7631],\n",
-       "        [ 0.4306,  1.2011,  0.0873,  ...,  0.8817,  0.3722,  0.3458]])"
+       "        [ 0.5831, -0.2514,  0.4156,  ..., -0.2735, -0.8659, -1.4063]])"
       ]
      },
      "execution_count": 9,
@@ -367,9 +391,10 @@
     "    \"\"\"\n",
     "    Returns accuracy per batch, i.e. if you get 8/10 right, this returns 0.8, NOT 8\n",
     "    \"\"\"\n",
-    "    max_preds = preds.argmax(dim = 1, keepdim = True) # get the index of the max probability\n",
-    "    correct = max_preds.squeeze(1).eq(y)\n",
-    "    return correct.sum() / torch.FloatTensor([y.shape[0]])"
+    "    top_pred = preds.argmax(1, keepdim = True)\n",
+    "    correct = top_pred.eq(y.view_as(top_pred)).sum()\n",
+    "    acc = correct.float() / y.shape[0]\n",
+    "    return acc"
    ]
   },
   {
@@ -480,24 +505,32 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ben/miniconda3/envs/pytorch17/lib/python3.8/site-packages/torchtext-0.9.0a0+c38fd42-py3.8-linux-x86_64.egg/torchtext/data/batch.py:23: UserWarning: Batch class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.\n",
+      "  warnings.warn('{} class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.'.format(self.__class__.__name__), UserWarning)\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Epoch: 01 | Epoch Time: 0m 0s\n",
-      "\tTrain Loss: 1.310 | Train Acc: 47.99%\n",
-      "\t Val. Loss: 0.947 |  Val. Acc: 66.81%\n",
+      "\tTrain Loss: 1.312 | Train Acc: 47.11%\n",
+      "\t Val. Loss: 0.947 |  Val. Acc: 66.41%\n",
       "Epoch: 02 | Epoch Time: 0m 0s\n",
-      "\tTrain Loss: 0.869 | Train Acc: 69.09%\n",
-      "\t Val. Loss: 0.746 |  Val. Acc: 74.18%\n",
+      "\tTrain Loss: 0.870 | Train Acc: 69.18%\n",
+      "\t Val. Loss: 0.741 |  Val. Acc: 74.14%\n",
       "Epoch: 03 | Epoch Time: 0m 0s\n",
-      "\tTrain Loss: 0.665 | Train Acc: 76.94%\n",
-      "\t Val. Loss: 0.627 |  Val. Acc: 78.03%\n",
+      "\tTrain Loss: 0.675 | Train Acc: 76.32%\n",
+      "\t Val. Loss: 0.621 |  Val. Acc: 78.49%\n",
       "Epoch: 04 | Epoch Time: 0m 0s\n",
-      "\tTrain Loss: 0.503 | Train Acc: 83.42%\n",
-      "\t Val. Loss: 0.548 |  Val. Acc: 79.73%\n",
+      "\tTrain Loss: 0.506 | Train Acc: 83.97%\n",
+      "\t Val. Loss: 0.547 |  Val. Acc: 80.32%\n",
       "Epoch: 05 | Epoch Time: 0m 0s\n",
-      "\tTrain Loss: 0.376 | Train Acc: 87.88%\n",
-      "\t Val. Loss: 0.506 |  Val. Acc: 81.40%\n"
+      "\tTrain Loss: 0.373 | Train Acc: 88.23%\n",
+      "\t Val. Loss: 0.487 |  Val. Acc: 82.92%\n"
      ]
     }
    ],
@@ -542,7 +575,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Loss: 0.411 | Test Acc: 87.15%\n"
+      "Test Loss: 0.415 | Test Acc: 86.07%\n"
      ]
     }
    ],
@@ -570,7 +603,7 @@
    "outputs": [],
    "source": [
     "import spacy\n",
-    "nlp = spacy.load('en')\n",
+    "nlp = spacy.load('en_core_web_sm')\n",
     "\n",
     "def predict_class(model, sentence, min_len = 4):\n",
     "    model.eval()\n",
@@ -681,7 +714,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
